[gd_scene load_steps=6 format=2]

[ext_resource path="res://IndieFlower-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://Ala Flair.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.0352941, 0.223529, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 429.0
margin_top = 178.0
margin_right = 594.0
margin_bottom = 422.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 165.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Reset Level"

[node name="CheckButton" type="CheckButton" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 165.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "Music "

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 137.0
margin_bottom = 244.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Exit Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
